--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^8.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-canvas-confetti": "^1.3.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-wrap-balancer": "^0.3.0",
